# deltaray

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.ini
envs/: env.yml
notebooks/: deltaray-demo.ipynb
src/deltaray/: __init__.py
src/deltaray/data/: __init__.py  read_api.py
tests/: test_import.py
